<resources>
    <string name="app_name">MyAlcProject1</string>
    <string name="slackname">Fouhad Olalekan</string>
    <string name="slack_username">Slack Username :</string>
    <string name="_08063723709">08022225282</string>
    <string name="phone">Phone :</string>
    <string name="email">folalekan13@yahoo.com</string>
    <string name="emailname">Email :</string>
    <string name="nigeria">Nigeria</string>
    <string name="country">Country :</string>
    <string name="android">Android</string>
    <string name="track">Track :</string>
    <string name="name">Olalekan fouhad</string>
</resources>
